--- a/src/scss/blocks/_button.scss
+++ b/src/scss/blocks/_button.scss
@@ -1,3 +1,7 @@
-.main {
-  color: blue;
+.btn {
+  width: 165px;
+  height: 50px;
+  background-color: #fff;
+  border: none;
+  border-radius: 8px;
 }
