--- a/src/scss/blocks/_button.scss
+++ b/src/scss/blocks/_button.scss
@@ -1,7 +1,10 @@
 .btn {
   width: 165px;
   height: 50px;
-  background-color: #fff;
+  background-color: #017ffa;
   border: none;
   border-radius: 8px;
+  color: #ffffff;
+  font-size:16px;
+  box-shadow: 14px 11px 18px 6px rgba(181, 208, 244, 0.75);
 }
