--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,8 +1,9 @@
 .header {
   width: 100%;
-  background-color: #0B1643;
+  max-width: 1200px;
   max-height: 170px;
   height: 25vh;
+  margin: 0 auto;
 
   &__inner {
     margin: 0 auto;
