- form done; - no links;

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -7,3 +7,10 @@
   max-width: 1200px;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 1400px) {
+  .section {
+    max-width: initial;
+    width: 80%;
+  }
+}
