--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -30,3 +30,10 @@ body {
   font-style: normal;
   font-weight: normal;
 }
+
+@font-face {
+  font-family: "PoppinsMedium";
+  src: url("./fonts/Poppins-Bold.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
