--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,6 +1,5 @@
 .header {
   width: 100%;
-  max-width: 1200px;
   max-height: 170px;
   height: 25vh;
   margin: 0 auto;
@@ -12,11 +11,16 @@
     max-width: 1020px;
     display: flex;
     justify-content: space-between;
+    position: relative;
   }
 
   &__item {
     display: flex;
     align-items: center;
+
+    &:nth-child(4) {
+      margin-left: auto;
+    }
   }
 
   &__image {
@@ -24,8 +28,117 @@
   }
 }
 
-@media screen and (max-width: 1200px) {
+.menu__toggle {
+  opacity: 0;
+  position: absolute;
+}
+
+.menu__btn {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #616161;
+  transition: all .4s ease;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .header__item {
+  visibility: visible;
+  left: 0;
+}
+
+@media screen and (max-width: 1400px) {
   .header {
-    padding: 0 10%;
+
+    &__inner {
+      max-width: initial;
+      width: 80%;
+    }
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .header {
+
+    &__item {
+
+      &:nth-child(4) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        visibility: hidden;
+        top: 120px;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.8);
+        width: 100%;
+        height: calc(50vh - 120px);
+        min-height: 240px;
+
+        & li {
+          padding: 10px 0;
+        }
+
+        & a {
+          display: inline-block;
+          font-size: 20px;
+          color: #ffffff;
+
+          &:hover {
+            color: #697697;
+          }
+        }
+      }
+    }
+  }
+
+  .menu__toggle {
+    position: initial;
+  }
+}
+
+@media screen and (min-width: 680px) {
+  .menu__btn {
+    display: none;
   }
 }
