--- a/src/scss/blocks/_button.scss
+++ b/src/scss/blocks/_button.scss
@@ -15,3 +15,9 @@
     transition: background-color .3s ease;
   }
 }
+
+@media screen and (max-width: 870px) {
+  .btn {
+    box-shadow: none;
+  }
+}
