--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -8,7 +8,7 @@
     margin: 0 auto;
     width: 100%;
     height: 100%;
-    max-width: 1020px;
+    max-width: 1200px;
     display: flex;
     justify-content: space-between;
     position: relative;
@@ -18,8 +18,11 @@
     display: flex;
     align-items: center;
 
-    &:nth-child(4) {
-      margin-left: auto;
+    p {
+      font-size: 40px;
+      font-family: 'PoppinsSemiBoldItalic', sans-serif;
+      color: #017ffa;
+      text-transform: uppercase;
     }
   }
 
@@ -96,7 +99,7 @@
   }
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 870px) {
   .header {
 
     &__item {
@@ -137,7 +140,7 @@
   }
 }
 
-@media screen and (min-width: 680px) {
+@media screen and (min-width: 870px) {
   .menu__btn {
     display: none;
   }
