--- a/src/scss/blocks/_blocks.scss
+++ b/src/scss/blocks/_blocks.scss
@@ -1,6 +1,7 @@
+@import "_block-title";
+@import "_burger-menu";
+@import "_button";
+@import "_footer";
+@import "_form";
 @import "_header";
 @import "_list";
-@import "_button";
-@import "_block-title";
-@import "_form";
-@import "_footer";
