--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -31,64 +31,6 @@
   }
 }
 
-.menu__toggle {
-  opacity: 0;
-  position: absolute;
-}
-
-.menu__btn {
-  display: flex;
-  align-items: center;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  width: 26px;
-  height: 26px;
-  cursor: pointer;
-  z-index: 1;
-}
-
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: #616161;
-  transition: all .4s ease;
-
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-.menu__btn > span::before {
-  content: '';
-  top: -8px;
-}
-.menu__btn > span::after {
-  content: '';
-  top: 8px;
-}
-
-#menu__toggle:checked ~ .menu__btn > span {
-  transform: rotate(45deg);
-}
-#menu__toggle:checked ~ .menu__btn > span::before {
-  top: 0;
-  transform: rotate(0);
-}
-#menu__toggle:checked ~ .menu__btn > span::after {
-  top: 0;
-  transform: rotate(90deg);
-}
-#menu__toggle:checked ~ .header__item {
-  visibility: visible;
-  left: 0;
-}
-
 @media screen and (max-width: 1400px) {
   .header {
 
@@ -103,6 +45,7 @@
   .header {
 
     &__item {
+      order: -1;
 
       &:nth-child(4) {
         display: flex;
@@ -133,15 +76,5 @@
         }
       }
     }
-  }
-
-  .menu__toggle {
-    position: initial;
-  }
-}
-
-@media screen and (min-width: 870px) {
-  .menu__btn {
-    display: none;
   }
 }
